hey, at least the x-overflow rotation bug works as well as if not better than Medium

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -2,18 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  padding: env(safe-area-inset);
-}
-
-body {
-  position: relative;
-}
-
 html,
 body {
-  height: 100vh;
-  width: 100vw;
   overflow-x: hidden;
 }
 
